# openvario-shell-logmailer

./: .gitignore  README.md  setup.cfg
src/ovshell_logmailer/: __init__.py  api.py  ext.py  logemailerapp.py  logrepository.py  mailer.py
