[metadata]
name = openvario-shell-logmailer
version = 0.1.0
description = E-mails log files from the OpenVario Shell
long_description = file: README.md
long_description_content_type = text/markdown
author = Sigged
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = openvario tui menu shell email logs
project_urls =

[options]
packages = find:
package_dir =
    = src

[options.entry_points]
ovshell.extensions =
    logmailer=ovshell_logmailer:extension

